<resources>
    <string name="app_name">BrewMapp</string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="facebook">Войти с помощью Facebook</string>
    <string name="entrance"></string>
    <string name="registration">Регистрация</string>
    <string name="photo">фото</string>
    <string name="last_name">Ваша фамилия</string>
    <string name="name">Ваше имя</string>
    <string name="your_gender">Ваш пол:</string>
    <string name="gender_man">Мужской</string>
    <string name="gender_woman">Женский</string>
    <string name="next">Далее</string>
    <string name="my_profile">Мой профиль</string>
    <string name="events">Лента новостей</string>
    <string name="messages">Сообщения</string>
    <string name="serach">Поиск</string>
    <string name="meetings">Мероприятия</string>
    <string name="map">Карта</string>
    <string name="friends">Друзья</string>
    <string name="groups">Группы</string>
    <string name="games">Игры</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="create">Создать</string>
    <string name="enter_phone_hint">На указанный номер телефона будет отправлено сообщение с кодом подтверждения</string>
    <string name="phone_number">Номер телефона</string>
    <string name="confirm_code">Код подтверждения</string>
    <string name="confirm_hint">Мы отправили Вам SMS с кодом подтверждения</string>
    <string name="confirm_counter_pattern">Повторить отправку кода: %s</string>
    <string name="confirm">Подтверждение</string>
    <string name="enter_password_hint">Указанный номер телефона и пароль можно использовать для входа в Ваш аккаунт</string>
    <string name="new_password_hint">Придумайте ваш пароль</string>
    <string name="resend_code">Повторить отправку кода</string>
    <string name="find_friend">Поиск новых друзей</string>
    <string name="find">Искать</string>
    <string name="done">Готово</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="invite_hint">Вы можете пригласить своих друзей также присоединится к нашему приложению</string>
    <string name="friends_count">друзей</string>
    <string name="subscribers_count">подписчиков</string>
    <string name="photos_count">фото</string>
    <string name="video_count">видео</string>
    <string name="online">Онлайн</string>
    <string name="offline">Оффлайн</string>
    <string name="new_post">Новая запись</string>
    <string name="add_photo">Добавить фото</string>
    <string name="fav_beer">Любимое пиво</string>
    <string name="fav_bars">Любимые заведения</string>
    <string name="my_ratings">Мои оценки</string>
    <string name="my_posts">Мои записи</string>
    <string name="subscriptions">Подписки</string>
    <string name="albums">Альбомы</string>
    <string name="add">Добавить</string>
    <string name="album_name">Название альбома</string>
    <string name="album_description">Описание</string>
    <string name="new_album">Новый альбом</string>
    <string name="album_created">Альбом успешно сохранен</string>
    <string name="cap_photo">Фото</string>
    <string name="vk">ВКонтакте</string>
    <string name="gp">Google</string>
    <string name="phone">Телефон</string>
    <string name="fb">Facebook</string>
    <string name="invite">Пригласить</string>
    <string name="tw">Twitter</string>
    <string name="message_sent">Приглашение отправлено</string>
    <string name="error">Произошла ошибка</string>
    <string name="invited">Выслано</string>
    <string name="invited_to_event">приглашено</string>
    <string name="invite_message">Привет, Я только что загрузил приложение BrewMapp на мой Android. Это приложение является поисковиком, навигатором, информационной базой, ценовым и новостным агрегатором и социальной сетью в мире крафтового пива! Скачай приложение с https://www.brewmapp.com и узнавай о новых сортах, пивоварнях, событиях или сам добавляй их!</string>
    <string name="select_contact">Поделиться</string>
    <string name="brew_invite">Приглашение в Brewmapp</string>
    <string name="enter_post">Введите текст вашего сообщения</string>
    <string name="duration">Всего дней:\u0020</string>
    <string name="day">\u0020 день</string>
    <string name="days">\u0020 дней</string>
    <string-array name="avatar_options">
        <item>Из галереи</item>
        <item>Сделать фото</item>
        
    </string-array>
    <string-array name="avatar_options_mini">
        <item>Из галереи</item>
        <item>Сделать фото</item>
    </string-array>
    <string-array name="event_types">
        <item>Отзывы</item>
        <item>Новости</item>
        <item>События</item>
    </string-array>
    <string-array name="search_types">
        <item>Пиво</item>
        <item>Заведения</item>
        <item>Пивоварни</item>
    </string-array>
    <string-array name="share_items_sale">
        <item>Поделиться</item>
        <item>Репост</item>
        <item>Пожаловться</item>
    </string-array>
    <string-array name="share_items_post">
        <item>Поделиться</item>
        <item>Репост</item>
        <item>Пожаловться</item>
        <item>Удалить</item>
    </string-array>
    <string-array name="events_filter_events">
        <item>Все</item>
        <item>Я пойду</item>
        <item>Приглашения</item>
        <item>Подписка</item>
        <item>Календарь</item>
        <item>По городу: </item>
    </string-array>
    <string-array name="events_filter_sales">
        <item>Все</item>
        <item>Подписка</item>
        <item>Календарь</item>
    </string-array>
    <string-array name="tabs_extended_search">
        <item>Новости</item>
        <item>Акции</item>
        <item>События</item>
        <item>Пиво</item>
        <item>Заведения</item>
        <item>Пивоварни</item>
        <item>Пользователи</item>
        <item>Фото</item>
    </string-array>
    <string-array name="events_filter_news">
        <item>Все</item>
        <item>Подписка</item>
        <item>Календарь</item>
        <item>Мои новости</item>
        <item>По типу: </item>
        <item>По городу: </item>
    </string-array>
    <string-array name="main_menu">
        <item>События</item>
        <item>Сообщения</item>
        <item>Поиск</item>
        <item>Мероприятия</item>
        <item>Карта</item>
        <item>Друзья</item>
        <item>Группы</item>
        <item>Игры</item>
        <item>Избранное</item>
        <item>Настройки</item>
    </string-array>
    <string-array name="full_search">
        <item>Пиво</item>
        <item>Заведения</item>
        <item>Пивоварни</item>
    </string-array>
    <string-array name="filter_search">
        <item>Заведения</item>
        <item>Пиво</item>
    </string-array>
    <string-array name="search_title">
        <item>Поиск заведения</item>
        <item>Поиск пива</item>
        <item>Поиск пивоварни</item>
    </string-array>
    <string-array name="filter_title_search">
        <item>Поиск заведения</item>
        <item>Поиск пива</item>
    </string-array>
    <string-array name="album_actions">
        <item>Редактировать</item>
        <item>Удалить</item>
    </string-array>
    <string-array name="filter_review">
        <item>Все</item>
        <item>Мои отзывы</item>
        <item>По типу: </item>
        <item>По городу: </item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="select_place">Выберите место</string>
    <string name="send">Отправить</string>
    <string name="confirm_stop_edit">Выход</string>
    <string name="confirm_cancel_post">Отменить создание записи?</string>
    <string name="stay">Остаться</string>
    <string name="leave">Выйти</string>
    <string name="post_created">Запись создана</string>
    <string name="post_deleted">Запись удалена</string>
    <string name="enter_title">* Введите заголовок</string>
    <string name="no_incoming_requests">Нет входящих запросов</string>
    <string name="incoming_requests">Входящие</string>
    <string name="no_outgoing_requests">Нет исходящих запросов</string>
    <string name="outgoing_requests">Исходящие</string>
    <string name="no_friends">Друзей пока нет</string>
    <string name="albums_count">альбомов</string>
    <string name="logout">Выход</string>
    <string name="friends_only">Только для друзей</string>
    <string name="delayed_post">Отложенная запись</string>
    <string name="post_date">Дата публикации</string>
    <string name="today">Сегодня</string>
    <string name="params">Параметры</string>
    <string name="search">Поиск</string>
    <string name="map_search">Поиск заведения или пива</string>
    <string name="search_beer">Поиск пива</string>
    <string name="pattern_event_start" formatted="false">%s в %s</string>
    <string name="search_hint">Введите слово или хештег</string>
    <string name="more_results">Больше результатов</string>
    <string name="extended_search">Расширенный поиск</string>
    <string name="connection_error">Произошла ошибка. Проверьте подключение</string>
    <string name="interested">интересно</string>
    <string name="will_go">пойдут</string>
    <string name="press_to_add_image">Нажмите, чтобы добавить новое изображение</string>
    <string name="event_description">Описание</string>
    <string name="alert">Пожаловаться</string>
    <string name="share">Поделиться</string>
    <string name="claimed">Жалоба отправлена</string>
    <string name="on_map">На карте</string>
    <string name="photos">Фотографии</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="album_removing">Удаление альбома</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no_events">События отсутствуют</string>
    <string name="no_sales">Акции отсутствуют</string>
    <string name="no_news">Новости отсутствуют</string>
    <string name="add_photo_description">Добавьте подпись</string>
    <string name="subscribes_count">подписок</string>
    <string name="claim_recieve">Ваша жалоба принята. Спасибо.</string>
    <string name="key_repost_id">key_intent_serializable</string>
    <string name="key_repost_model">key_repost_model</string>
    <string name="text_no_while_news">Тут пока еще нет новостей ;)</string>
    <string name="title_activity_add_beer">Поиск</string>
    <string name="key_serializable_extra">key_serializable_extra</string>
    <string name="action_add">Добавление</string>
    <string name="text_button_save">Сохранить изменения</string>
    <string name="message_send">Личное сообщение</string>
    <string name="text_view_interior">Интерьер:</string>
    <string name="text_view_service">Сервис:</string>
    <string name="text_view_quality_beer">Качество пива:</string>
    <string name="text_view_common_effect">Общее впечатление:</string>
    <string name="text_view_avg_account">Средний счет:</string>
    <string name="text_view_place">Расположение:</string>
    <string name="text_view_call">Позвонить:</string>
    <string name="text_view_kitchen">Кухня:</string>
    <string name="button.call">ПОЗВОНИТЬ</string>
    <string name="hint_mobile_phone">79991234567</string>
    <string name="special_offer">Специальные предложения</string>
    <string name="craft_beer">Показывать крафтовое пиво</string>
    <string name="filter_beer">Показывать фильтрованное пиво</string>
    <string name="nothing_not_found">По запросу ничего не найдено</string>
    <string name="you_first_last_name">Ваше фамилия имя и отчество</string>
    <string name="email">Email</string>
    <string name="text_hint_mobile_phone">Телефон</string>
    <string name="hint_email">email@example.com</string>
</resources>