<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_center_align" />

    <com.brewmapp.presentation.view.impl.widget.FinderView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:finderHint="@string/search_hint"
        android:id="@+id/activity.search.search"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/activity.search.list"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.Green.Solid.Square"
        android:id="@+id/activity.search.more"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_common"
        android:text="@string/more_results"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity.search.tv_not_found"
        android:gravity="center"
        android:text="@string/nothing_not_found"
        android:visibility="gone"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity.search.progress"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</LinearLayout>
