<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.brewmapp.presentation.view.impl.widget.TabsView
        android:id="@+id/fragment.events.tabs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/filter_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accept.filter_layout"
        android:layout_below="@+id/fragment.events.tabs" />

    <LinearLayout
        android:id="@+id/lyt_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_list"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_offer"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/craft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/craft_beer"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/filter_beer"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        style="@style/AppTheme.Button.Green.Solid.Square"
        android:gravity="center"
        android:id="@+id/accept.filter_layout"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="@dimen/size_icon_24"
            android:layout_height="@dimen/size_icon_24"
            android:src="@drawable/ic_search_big_white"
            android:clickable="false"
            />
        <TextView
            android:id="@+id/accept.filter"
            style="@style/AppTheme.Button.Green.Solid.Square"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_common"
            android:clickable="false"
            android:gravity="center"
            />

    </LinearLayout>

</RelativeLayout>
