<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar_bm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/common_block_space_triple"
        android:paddingRight="@dimen/common_block_space_triple"
        android:background="@drawable/bg_start"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:id="@+id/activity.login.container">

        <ImageView
            android:layout_width="@dimen/size_start_logo"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo"
            android:id="@+id/activity.login.logo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <br.com.sapereaude.maskedEditText.MaskedEditText
                style="@style/AppTheme.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile_phone"
                android:inputType="phone"
                android:lines="1"
                android:background="@drawable/bg_input_top"
                mask:allowed_chars="1234567890"
                mask:mask="+# (###) ###-##-##"
                android:id="@+id/activity.login.login"
                />

            <android.support.v7.widget.AppCompatEditText
                style="@style/AppTheme.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:background="@drawable/bg_input_top"
                android:id="@+id/activity.login.login_email"
                android:visibility="invisible"
                />

        </RelativeLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/activity.login.rbGroup"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Телефон"
                android:textColor="@color/white"
                android:checked="true"
                android:id="@+id/activity.login.rbGroup.phone"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:id="@+id/activity.login.rbGroup.email"
                />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Input"
            android:inputType="textPassword"
            android:id="@+id/activity.login.password"
            android:background="@drawable/bg_input_bottom"
            android:layout_marginBottom="@dimen/common_block_space_triple"
            android:hint="@string/password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity.login.enter"
            android:layout_marginBottom="@dimen/common_block_space_triple"
            android:enabled="false"
            style="@style/AppTheme.Button.Green"
            android:text="@string/enter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_min_button"
            android:background="@drawable/selector_button_fb"
            android:id="@+id/activity.login.fb"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="@dimen/common_block_space"
                android:src="@drawable/ic_fb"/>

            <ru.frosteye.ovsa.presentation.view.widget.Line
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorFbSplitter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:layout_marginLeft="@dimen/common_block_space_double"
                android:textSize="@dimen/text_facebook_login"
                android:textColor="@color/color_text_button_white"/>
        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/activity.login.fbLogin"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"  />

    </LinearLayout>
</LinearLayout>
