<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brewmapp.presentation.view.impl.fragment.Simple.AboutFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/common_block_space_triple"
        android:paddingRight="@dimen/common_block_space_triple"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/you_first_last_name"
                android:inputType="textCapWords"
                android:lines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_mobile_phone"
                android:inputType="phone"
                android:lines="1"
                mask:mask="+# (###) ###-##-##"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</FrameLayout>
